# time-tracker

./: Cargo.toml  package-lock.json  styles.css  tailwind.config.js
src/: app.rs  components.rs  invoke.rs  main.rs  notifications.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activities.rs  main.rs
src/components/: actions.rs  pure_html.rs  reporting.rs  statistics.rs  timeline.rs
style/: styles.css
